rt_score overflow fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -83,7 +83,7 @@
     position: relative;
     padding: 20px;
     max-width: 800px;
-    max-height: 90%;
+    max-height: 100%;
     background: lightcoral;
     color: white;
     border: 2px solid white;
@@ -153,5 +153,8 @@
   .App {
     grid-template-columns: 1fr;
     margin: 0;
+    .modal-info__description {
+      max-height: 150px;
+    }
   }
 }
